# redis-py

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  test.py  test2.py
.github/instructions/: project-layout.instructions.md
.github/workflows/: pre-release.yaml  release.yaml  test.yaml
examples/: chat_history.py  scan_queue.py  search.py  simple.py  simple_async.py  twitter_clone.py
tests/: async_client.py  base.py  client.py  conftest.py  execute_on_http.py  prepare_database.py  sync_client.py  test_client.py  test_execute.py  test_formatters.py  test_http.py  test_read_your_writes.py  test_run.py  test_utils.py
tests/commands/: test_bitcount.py  test_bitfield.py  test_bitfield_ro.py  test_bitop.py  test_bitpos.py  test_copy.py  test_delete.py  test_echo.py  test_exists.py  test_expire.py  test_expireat.py  test_getbit.py  test_keys.py  test_persist.py  test_pexpire.py  test_pexpireat.py  test_pipeline.py  test_pttl.py  test_randomkey.py  test_scan.py  test_setbit.py  test_touch.py  test_ttl.py  test_type.py  test_unlink.py
tests/commands/asyncio/: test_asyncio_pipeline.py  test_pipeline.py
tests/commands/bitmap/: test_bitcount.py  test_bitfield.py  test_bitfield_ro.py  test_bitop.py  test_bitpos.py  test_getbit.py  test_setbit.py
tests/commands/connection/: test_client_setinfo.py  test_echo.py  test_ping.py
tests/commands/eval/: test_eval.py  test_evalsha.py
tests/commands/generic/: test_copy.py  test_copy_sync.py  test_delete.py  test_exists.py  test_expire.py  test_expireat.py  test_keys.py  test_persist.py  test_pexpire.py  test_pexpireat.py  test_pttl.py  test_randomkey.py  test_rename.py  test_renamenx.py  test_scan.py  test_touch.py  test_ttl.py  test_type.py  test_unlink.py
tests/commands/geo/: test_geoadd.py  test_geodist.py  test_geohash.py  test_geopos.py  test_georadius.py
tests/commands/hash/: test_hdel.py  test_hexists.py  test_hexpire.py  test_hexpireat.py  test_hexpiretime.py  test_hget.py  test_hgetall.py  test_hgetdel.py  test_hgetex.py  test_hincrby.py  test_hincrbyfloat.py  test_hkeys.py  test_hlen.py  test_hmget.py  test_hmset.py  test_hpersist.py  test_hpexpire.py  test_hpexpireat.py  test_hpexpiretime.py  test_hpttl.py  test_hrandfield.py  test_hscan.py  test_hset.py  test_hsetex.py  test_hsetnx.py  test_hstrlen.py  test_httl.py  test_hvals.py
tests/commands/hyperloglog/: test_pfadd.py  test_pfcount.py  test_pfmerge.py
tests/commands/json/: test_arrappend.py  test_arrindex.py  test_arrinsert.py  test_arrlen.py  test_arrpop.py  test_arrtrim.py  test_clear.py  test_delete_json.py  test_forget.py  test_get_json.py  test_json_arrappend.py  test_json_arrindex.py  test_json_arrinsert.py  test_json_arrlen.py  test_json_arrpop.py  test_merge.py  (+28 more)
tests/http/: test_decode.py  test_execute.py
tests/utils/: test_base.py  test_comparison.py  test_exception.py  test_format.py
upstash_py/: .env.example  client.py  config.py  exception.py  schema.py  types.py
upstash_py/http/: decode.py  execute.py
upstash_py/schema/: http.py  telemetry.py
upstash_py/utils/: base.py  comparison.py  exception.py  format.py
upstash_redis/: __init__.py  client.py  commands-old.py  commands.py  commands.pyi  config.py  errors.py  format.py  http.py  search.py  search_index.py  search_namespace.py  search_types.py  search_utils.py  typing.py  utils.py
upstash_redis/aio/: __init__.py
upstash_redis/asyncio/: __init__.py  client.py
upstash_redis/commands/: __init__.py  async_commands.py  async_commands.pyi  commands.py  commands.pyi
upstash_redis/http/: decode.py  execute.py
upstash_redis/schema/: http.py
upstash_redis/utils/: exception.py  format.py
(+201 files in other folders)
