[tool.poetry]
name = "upstash_redis"
version = "0.14.5"
description = "Serverless Redis Sdk from Upstash"
authors = ["Upstash <support@upstash.com>", "Zgîmbău Tudor <tudor.zgimbau@gmail.com>"]
readme = "README.md"
packages = [{ include = "upstash_redis" }]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.4"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pytest-asyncio = "^0.21.0"
mypy = "^1.4.1"
types-requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
